--- a/scrapy_site/email.conf
+++ b/scrapy_site/email.conf
@@ -1,1 +1,1 @@
-b2b10086,bidding,chinabidding,chinaunicombidding,csbidding,gdgpogov,gzsggzyjyzx,mssportal,telewiki,zycggov===liuhua@winhong.com===443053312@qq.com
+b2b10086,bidding,chinabidding,chinaunicombidding,csbidding,gdgpogov,gzsggzyjyzx,mssportal,telewiki,zycggov===xxx@qq.com===yyy@qq.com
